@@ -1,4 +1,12 @@
 #!/bin/bash
 
-java --add-modules java.xml.bind -classpath classes main.JAXBExample
+#Run Main
+echo "CalculatriceTest"
+java 	--module-path lib:modules								\
+	--add-modules org.common 								\
+	--add-reads org.common=junit  							\
+	--add-exports org.common/common.math=junit						\
+	--patch-module org.common=modules/
+	-m junit/org.junit.runner.JUnitCore common.math.test.CalculatriceTest
+
 
